--- a/index.ipynb
+++ b/index.ipynb
@@ -65,11 +65,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[11, 16, 21]\n"
+     ]
+    }
+   ],
    "source": [
-    "my_list = [1, 6, 11, 16, 21]"
+    "my_list = [1, 6, 11, 16, 21]\n"
    ]
   },
   {
@@ -405,7 +413,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
